--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,3 +24,10 @@ jobs:
         distribution: 'adopt'
     - name: Build with Maven
       run: mvn package --file pom.xml
+    - name: Upload target folder
+      uses: actions/upload-artifact@v2
+      with:
+        name: target
+        path: |
+          ${{ github.workspace }}/target
+          ${{ github.workspace }}/reports
