Add sheep heads; ensure descriptions only show if enabled

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -3,4 +3,5 @@ options:
   sword-of-beheading-multiplier: 1.8
   special:
     shulker-colors: true
+    sheep-colors: true
     frog-variants: true
