Added rare variant Bee head.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -2,6 +2,7 @@ options:
   auto-update: true
   sword-of-beheading-multiplier: 1.8
   special:
+    bee-variant-chance: 0.1
     shulker-colors: true
     sheep-colors: true
     frog-variants: true
